crates/luacad/tests/snapshots/example_snapshots__gear_ply.snap
---
source: crates/luacad/tests/example_snapshots.rs
expression: ply_output(&geoms)
---
ply
format ascii 1.0
comment Exported from LuaCAD Studio
comment Generated by csgrs library
element vertex 295
property float x
property float y
property float z
property float nx
property float ny
property float nz
element face 176
property list uchar int vertex_indices
end_header
0.000000 0.000000 0.000000 -0.000000 -0.000000 -1.000000
6.467156 -2.678784 0.000000 0.000000 -0.000000 -1.000000
4.949748 -4.949748 0.000000 0.000000 -0.000000 -1.000000
4.949749 4.949746 0.000000 0.000000 0.000000 -1.000000
6.467157 2.678784 0.000000 0.000000 0.000000 -1.000000
7.000000 0.000000 0.000000 0.000000 0.000000 -1.000000
7.000000 -0.000001 0.000000 0.000000 -0.000000 -1.000000
6.801087 -0.999999 0.000000 0.000000 0.000000 -1.000000
7.198912 1.000001 0.000000 0.000000 0.000000 -1.000000
10.000000 -0.999998 0.000000 0.000000 0.000000 -1.000000
10.000000 1.000002 0.000000 0.000000 0.000000 -1.000000
6.801087 1.000001 0.000000 -0.000000 -0.000000 -1.000000
0.000000 0.000000 5.000000 0.000000 0.000000 1.000000
4.949748 -4.949748 5.000000 0.000000 0.000000 1.000000
6.467156 -2.678784 5.000000 0.000000 0.000000 1.000000
6.467157 2.678784 5.000000 0.000000 0.000000 1.000000
4.949749 4.949746 5.000000 0.000000 0.000000 1.000000
7.000000 0.000000 5.000000 0.000000 0.000000 1.000000
7.000000 -0.000001 5.000000 0.000000 0.000000 1.000000
6.801087 -0.999999 5.000000 0.000000 0.000000 1.000000
10.000000 -0.999998 5.000000 0.000000 0.000000 1.000000
7.198913 1.000001 5.000000 0.000000 0.000000 1.000000
10.000000 1.000002 5.000000 0.000000 0.000000 1.000000
6.801087 1.000001 5.000000 -0.000000 -0.000000 1.000000
6.467156 -2.678784 0.000000 0.980785 -0.195090 0.000000
6.801088 -0.999999 0.000000 0.980785 -0.195090 0.000000
6.467156 -2.678784 5.000000 0.980785 -0.195090 0.000000
6.801088 -0.999999 5.000000 0.980785 -0.195090 0.000000
6.467157 2.678784 5.000000 0.980785 0.195090 0.000000
6.801087 1.000001 0.000000 0.980785 0.195090 0.000000
6.467157 2.678784 0.000000 0.980785 0.195090 0.000000
6.801087 1.000001 5.000000 0.980785 0.195090 0.000000
7.198912 1.000001 0.000000 0.000000 1.000000 0.000000
6.801087 1.000001 5.000000 0.000000 1.000000 0.000000
7.198913 1.000001 5.000000 0.000000 1.000000 0.000000
6.801087 1.000001 0.000000 0.000000 1.000000 0.000000
10.000000 -0.999998 5.000000 0.000000 -1.000000 0.000000
6.801087 -0.999999 0.000000 0.000000 -1.000000 0.000000
10.000000 -0.999998 0.000000 0.000000 -1.000000 0.000000
6.801087 -0.999999 5.000000 0.000000 -1.000000 0.000000
10.000000 1.000002 0.000000 -0.000000 1.000000 0.000000
10.000000 1.000002 5.000000 -0.000000 1.000000 0.000000
2.678784 -6.467156 0.000000 0.000000 -0.000000 -1.000000
7.778173 -6.363962 0.000000 0.000000 0.000000 -1.000000
4.383293 -5.797508 0.000000 0.000000 0.000000 -1.000000
5.516201 -4.101989 0.000000 0.000000 0.000000 -1.000000
6.363959 -7.778175 0.000000 0.000000 0.000000 -1.000000
4.101987 -5.516202 0.000000 -0.000000 -0.000000 -1.000000
2.678784 -6.467156 5.000000 0.000000 0.000000 1.000000
7.778173 -6.363962 5.000000 0.000000 0.000000 1.000000
4.383292 -5.797507 5.000000 0.000000 0.000000 1.000000
6.363959 -7.778175 5.000000 0.000000 0.000000 1.000000
5.516201 -4.101989 5.000000 0.000000 0.000000 1.000000
4.101987 -5.516202 5.000000 -0.000000 -0.000000 1.000000
6.467156 -2.678784 5.000000 0.831470 -0.555570 0.000000
5.516201 -4.101989 0.000000 0.831470 -0.555570 0.000000
6.467156 -2.678784 0.000000 0.831470 -0.555570 0.000000
5.516201 -4.101989 5.000000 0.831470 -0.555570 0.000000
4.101988 -5.516202 5.000000 0.555570 -0.831470 0.000000
2.678784 -6.467156 0.000000 0.555570 -0.831470 0.000000
4.101988 -5.516202 0.000000 0.555570 -0.831470 0.000000
2.678784 -6.467156 5.000000 0.555570 -0.831470 0.000000
4.383292 -5.797507 5.000000 -0.707107 -0.707107 0.000000
4.101987 -5.516202 0.000000 -0.707107 -0.707107 0.000000
4.383293 -5.797508 0.000000 -0.707107 -0.707107 0.000000
4.101987 -5.516202 5.000000 -0.707107 -0.707107 0.000000
6.363959 -7.778175 5.000000 -0.707107 -0.707107 0.000000
6.363959 -7.778175 0.000000 -0.707107 -0.707107 0.000000
7.778173 -6.363962 0.000000 0.707107 0.707107 0.000000
5.516201 -4.101989 5.000000 0.707107 0.707107 0.000000
7.778173 -6.363962 5.000000 0.707107 0.707107 0.000000
5.516201 -4.101989 0.000000 0.707107 0.707107 0.000000
7.778173 -6.363962 5.000000 0.707107 -0.707107 0.000000
6.363959 -7.778175 0.000000 0.707107 -0.707107 0.000000
7.778173 -6.363962 0.000000 0.707107 -0.707107 0.000000
6.363959 -7.778175 5.000000 0.707107 -0.707107 0.000000
-2.678785 -6.467156 0.000000 -0.000000 -0.000000 -1.000000
-4.949748 -4.949748 0.000000 -0.000000 -0.000000 -1.000000
-0.000000 -7.000000 0.000000 -0.000000 -0.000000 -1.000000
1.000000 -10.000000 0.000000 0.000000 0.000000 -1.000000
-1.000000 -7.198912 0.000000 0.000000 0.000000 -1.000000
1.000000 -6.801087 0.000000 0.000000 0.000000 -1.000000
-1.000000 -10.000000 0.000000 0.000000 0.000000 -1.000000
-1.000000 -6.801087 0.000000 -0.000000 -0.000000 -1.000000
-4.949748 -4.949748 5.000000 0.000000 0.000000 1.000000
-2.678785 -6.467156 5.000000 0.000000 0.000000 1.000000
-0.000000 -7.000000 5.000000 0.000000 0.000000 1.000000
1.000000 -10.000000 5.000000 0.000000 0.000000 1.000000
-1.000000 -7.198912 5.000000 0.000000 0.000000 1.000000
-1.000000 -10.000000 5.000000 0.000000 0.000000 1.000000
1.000000 -6.801087 5.000000 0.000000 0.000000 1.000000
-1.000000 -6.801087 5.000000 -0.000000 -0.000000 1.000000
2.678784 -6.467156 5.000000 0.195090 -0.980785 0.000000
1.000000 -6.801087 0.000000 0.195090 -0.980785 0.000000
2.678784 -6.467156 0.000000 0.195090 -0.980785 0.000000
1.000000 -6.801087 5.000000 0.195090 -0.980785 0.000000
-2.678785 -6.467156 0.000000 -0.195090 -0.980785 0.000000
-1.000000 -6.801087 0.000000 -0.195090 -0.980785 0.000000
-2.678785 -6.467156 5.000000 -0.195090 -0.980785 0.000000
-1.000000 -6.801087 5.000000 -0.195090 -0.980785 0.000000
-1.000000 -7.198912 5.000000 -1.000000 0.000000 0.000000
-1.000000 -6.801087 0.000000 -1.000000 0.000000 0.000000
-1.000000 -7.198912 0.000000 -1.000000 0.000000 0.000000
-1.000000 -6.801087 5.000000 -1.000000 0.000000 0.000000
-1.000000 -10.000000 5.000000 -1.000000 -0.000000 0.000000
-1.000000 -10.000000 0.000000 -1.000000 -0.000000 0.000000
1.000000 -10.000000 0.000000 1.000000 0.000000 0.000000
1.000000 -6.801087 5.000000 1.000000 0.000000 0.000000
1.000000 -10.000000 5.000000 1.000000 0.000000 0.000000
1.000000 -6.801087 0.000000 1.000000 0.000000 0.000000
-6.467157 -2.678783 0.000000 -0.000000 -0.000000 -1.000000
-6.363962 -7.778173 0.000000 0.000000 0.000000 -1.000000
-5.797507 -4.383293 0.000000 0.000000 0.000000 -1.000000
-4.101989 -5.516201 0.000000 0.000000 0.000000 -1.000000
-7.778175 -6.363960 0.000000 0.000000 0.000000 -1.000000
-5.516202 -4.101988 0.000000 -0.000000 -0.000000 -1.000000
-6.467157 -2.678783 5.000000 0.000000 0.000000 1.000000
-6.363962 -7.778173 5.000000 0.000000 0.000000 1.000000
-5.797507 -4.383293 5.000000 0.000000 0.000000 1.000000
-7.778175 -6.363960 5.000000 0.000000 0.000000 1.000000
-4.101989 -5.516201 5.000000 0.000000 0.000000 1.000000
-5.516202 -4.101988 5.000000 -0.000000 -0.000000 1.000000
-2.678784 -6.467156 5.000000 -0.555570 -0.831470 0.000000
-4.101989 -5.516202 0.000000 -0.555570 -0.831470 0.000000
-2.678784 -6.467156 0.000000 -0.555570 -0.831470 0.000000
-4.101989 -5.516202 5.000000 -0.555570 -0.831470 0.000000
-5.516202 -4.101989 5.000000 -0.831470 -0.555570 0.000000
-6.467157 -2.678783 0.000000 -0.831470 -0.555570 0.000000
-5.516202 -4.101989 0.000000 -0.831470 -0.555570 0.000000
-6.467157 -2.678783 5.000000 -0.831470 -0.555570 0.000000
-5.516202 -4.101988 0.000000 -0.707107 0.707107 0.000000
-5.797507 -4.383293 0.000000 -0.707107 0.707107 0.000000
-5.516202 -4.101988 5.000000 -0.707107 0.707107 0.000000
-5.797507 -4.383293 5.000000 -0.707107 0.707107 0.000000
-7.778175 -6.363960 5.000000 -0.707107 0.707107 0.000000
-7.778175 -6.363960 0.000000 -0.707107 0.707107 0.000000
-6.363962 -7.778173 0.000000 0.707107 -0.707107 0.000000
-4.101989 -5.516201 5.000000 0.707107 -0.707107 0.000000
-6.363962 -7.778173 5.000000 0.707107 -0.707107 0.000000
-4.101989 -5.516201 0.000000 0.707107 -0.707107 0.000000
-6.363961 -7.778173 5.000000 -0.707107 -0.707107 0.000000
-7.778175 -6.363960 0.000000 -0.707107 -0.707107 0.000000
-6.363961 -7.778173 0.000000 -0.707107 -0.707107 0.000000
-7.778175 -6.363960 5.000000 -0.707107 -0.707107 0.000000
-6.467156 2.678784 0.000000 -0.000000 0.000000 -1.000000
-4.949747 4.949748 0.000000 -0.000000 0.000000 -1.000000
-7.000000 0.000001 0.000000 -0.000000 0.000000 -1.000000
-10.000000 -1.000001 0.000000 0.000000 0.000000 -1.000000
-7.198912 0.999999 0.000000 0.000000 0.000000 -1.000000
-6.801088 -1.000001 0.000000 0.000000 0.000000 -1.000000
-10.000000 0.999999 0.000000 0.000000 0.000000 -1.000000
-6.801088 0.999999 0.000000 -0.000000 -0.000000 -1.000000
-4.949747 4.949748 5.000000 0.000000 0.000000 1.000000
-6.467156 2.678784 5.000000 0.000000 0.000000 1.000000
-7.000000 0.000001 5.000000 0.000000 0.000000 1.000000
-10.000000 -1.000001 5.000000 0.000000 0.000000 1.000000
-7.198913 0.999999 5.000000 0.000000 0.000000 1.000000
-10.000000 0.999999 5.000000 0.000000 0.000000 1.000000
-6.801087 -1.000001 5.000000 0.000000 0.000000 1.000000
-6.801088 0.999999 5.000000 -0.000000 -0.000000 1.000000
-6.467157 -2.678783 5.000000 -0.980785 -0.195090 0.000000
-6.801087 -1.000001 0.000000 -0.980785 -0.195090 0.000000
-6.467157 -2.678783 0.000000 -0.980785 -0.195090 0.000000
-6.801087 -1.000001 5.000000 -0.980785 -0.195090 0.000000
-6.801088 0.999999 5.000000 -0.980785 0.195091 0.000000
-6.467156 2.678784 0.000000 -0.980785 0.195091 0.000000
-6.801088 0.999999 0.000000 -0.980785 0.195091 0.000000
-6.467156 2.678784 5.000000 -0.980785 0.195091 0.000000
-6.801088 0.999999 0.000000 0.000000 1.000000 0.000000
-7.198912 0.999999 0.000000 0.000000 1.000000 0.000000
-6.801088 0.999999 5.000000 0.000000 1.000000 0.000000
-7.198913 0.999999 5.000000 0.000000 1.000000 0.000000
-10.000000 0.999999 0.000000 -0.000000 1.000000 0.000000
-10.000000 0.999999 5.000000 -0.000000 1.000000 0.000000
-6.801087 -1.000001 5.000000 0.000000 -1.000000 -0.000000
-10.000000 -1.000001 5.000000 0.000000 -1.000000 -0.000000
-6.801088 -1.000001 0.000000 0.000000 -1.000000 -0.000000
-10.000000 -1.000001 0.000000 0.000000 -1.000000 -0.000000
-2.678782 6.467158 0.000000 -0.000000 0.000000 -1.000000
-7.778174 6.363961 0.000000 0.000000 -0.000000 -1.000000
-4.383293 5.797506 0.000000 0.000000 -0.000000 -1.000000
-5.516202 4.101989 0.000000 0.000000 -0.000000 -1.000000
-6.363961 7.778174 0.000000 0.000000 -0.000000 -1.000000
-4.949748 4.949747 0.000000 -0.000000 -0.000000 -1.000000
-4.101988 5.516201 0.000000 -0.000000 -0.000000 -1.000000
-2.678782 6.467158 5.000000 0.000000 0.000000 1.000000
-7.778174 6.363961 5.000000 0.000000 0.000000 1.000000
-4.383292 5.797505 5.000000 0.000000 0.000000 1.000000
-6.363961 7.778174 5.000000 0.000000 0.000000 1.000000
-5.516201 4.101988 5.000000 0.000000 0.000000 1.000000
-4.101988 5.516201 5.000000 -0.000000 -0.000000 1.000000
-5.516201 4.101988 0.000000 -0.831470 0.555570 0.000000
-6.467156 2.678784 0.000000 -0.831470 0.555570 0.000000
-5.516202 4.101988 5.000000 -0.831470 0.555570 0.000000
-6.467156 2.678784 5.000000 -0.831470 0.555570 0.000000
-4.101988 5.516202 5.000000 -0.555570 0.831470 0.000000
-2.678782 6.467158 0.000000 -0.555570 0.831470 0.000000
-4.101988 5.516202 0.000000 -0.555570 0.831470 0.000000
-2.678782 6.467158 5.000000 -0.555570 0.831470 0.000000
-4.383292 5.797505 5.000000 0.707107 0.707107 0.000000
-4.101988 5.516201 0.000000 0.707107 0.707107 0.000000
-4.383293 5.797506 0.000000 0.707107 0.707107 0.000000
-4.101988 5.516201 5.000000 0.707107 0.707107 0.000000
-6.363962 7.778175 5.000000 0.707107 0.707107 0.000000
-6.363962 7.778175 0.000000 0.707107 0.707107 0.000000
-5.516201 4.101988 5.000000 -0.707107 -0.707107 0.000000
-7.778174 6.363961 5.000000 -0.707107 -0.707107 0.000000
-5.516202 4.101989 0.000000 -0.707107 -0.707107 0.000000
-7.778174 6.363961 0.000000 -0.707107 -0.707107 0.000000
-7.778174 6.363961 5.000000 -0.707107 0.707107 0.000000
-6.363961 7.778174 0.000000 -0.707107 0.707107 0.000000
-7.778174 6.363961 0.000000 -0.707107 0.707107 0.000000
-6.363961 7.778174 5.000000 -0.707107 0.707107 0.000000
2.678785 6.467156 0.000000 0.000000 0.000000 -1.000000
0.000000 7.000000 0.000000 0.000000 0.000000 -1.000000
-1.000000 10.000000 0.000000 -0.000000 0.000000 -1.000000
1.000000 7.198912 0.000000 -0.000000 0.000000 -1.000000
-1.000000 6.801088 0.000000 -0.000000 0.000000 -1.000000
1.000000 10.000000 0.000000 -0.000000 0.000000 -1.000000
1.000000 6.801087 0.000000 -0.000000 -0.000000 -1.000000
2.678785 6.467156 5.000000 0.000000 0.000000 1.000000
0.000000 7.000000 5.000000 0.000000 0.000000 1.000000
-1.000000 10.000000 5.000000 0.000000 -0.000000 1.000000
1.000000 7.198913 5.000000 0.000000 -0.000000 1.000000
1.000000 10.000000 5.000000 0.000000 -0.000000 1.000000
-1.000000 6.801087 5.000000 0.000000 -0.000000 1.000000
1.000000 6.801087 5.000000 -0.000000 -0.000000 1.000000
-2.678782 6.467158 5.000000 -0.195090 0.980785 0.000000
-1.000000 6.801088 0.000000 -0.195090 0.980785 0.000000
-2.678782 6.467158 0.000000 -0.195090 0.980785 0.000000
-1.000000 6.801088 5.000000 -0.195090 0.980785 0.000000
1.000000 6.801087 5.000000 0.195090 0.980785 0.000000
2.678785 6.467156 0.000000 0.195090 0.980785 0.000000
1.000000 6.801087 0.000000 0.195090 0.980785 0.000000
2.678785 6.467156 5.000000 0.195090 0.980785 0.000000
1.000000 6.801087 0.000000 1.000000 -0.000000 0.000000
1.000000 7.198912 0.000000 1.000000 -0.000000 0.000000
1.000000 6.801087 5.000000 1.000000 -0.000000 0.000000
1.000000 7.198913 5.000000 1.000000 -0.000000 0.000000
1.000000 10.000000 0.000000 1.000000 0.000000 0.000000
1.000000 10.000000 5.000000 1.000000 0.000000 0.000000
-1.000000 6.801087 5.000000 -1.000000 -0.000000 -0.000000
-1.000000 10.000000 5.000000 -1.000000 -0.000000 -0.000000
-1.000000 6.801088 0.000000 -1.000000 -0.000000 -0.000000
-1.000000 10.000000 0.000000 -1.000000 -0.000000 -0.000000
6.363961 7.778174 0.000000 -0.000000 0.000000 -1.000000
5.797505 4.383292 0.000000 -0.000000 0.000000 -1.000000
4.101988 5.516201 0.000000 -0.000000 0.000000 -1.000000
7.778174 6.363961 0.000000 -0.000000 0.000000 -1.000000
4.949749 4.949745 0.000000 -0.000000 -0.000000 -1.000000
5.516202 4.101988 0.000000 -0.000000 -0.000000 -1.000000
6.363961 7.778174 5.000000 0.000000 0.000000 1.000000
5.797505 4.383292 5.000000 0.000000 0.000000 1.000000
7.778174 6.363961 5.000000 0.000000 0.000000 1.000000
4.101988 5.516201 5.000000 0.000000 0.000000 1.000000
5.516202 4.101989 5.000000 -0.000000 -0.000000 1.000000
4.949750 4.949744 5.000000 -0.000000 -0.000000 1.000000
4.101988 5.516201 0.000000 0.555570 0.831469 0.000000
2.678785 6.467156 0.000000 0.555570 0.831469 0.000000
4.101988 5.516202 5.000000 0.555570 0.831469 0.000000
2.678785 6.467156 5.000000 0.555570 0.831469 0.000000
5.516202 4.101989 5.000000 0.831470 0.555570 0.000000
6.467157 2.678784 0.000000 0.831470 0.555570 0.000000
5.516202 4.101989 0.000000 0.831470 0.555570 0.000000
6.467157 2.678784 5.000000 0.831470 0.555570 0.000000
5.516202 4.101988 0.000000 0.707107 -0.707107 0.000000
5.797505 4.383292 0.000000 0.707107 -0.707107 0.000000
5.516202 4.101989 5.000000 0.707107 -0.707107 0.000000
5.797505 4.383292 5.000000 0.707107 -0.707107 0.000000
7.778175 6.363961 5.000000 0.707107 -0.707107 0.000000
7.778175 6.363961 0.000000 0.707107 -0.707107 0.000000
6.363961 7.778175 0.000000 -0.707107 0.707107 0.000000
4.101988 5.516201 5.000000 -0.707107 0.707107 0.000000
6.363961 7.778175 5.000000 -0.707107 0.707107 0.000000
4.101987 5.516201 0.000000 -0.707107 0.707107 0.000000
6.363961 7.778174 5.000000 0.707107 0.707107 0.000000
7.778174 6.363961 0.000000 0.707107 0.707107 0.000000
6.363961 7.778174 0.000000 0.707107 0.707107 0.000000
7.778174 6.363961 5.000000 0.707107 0.707107 0.000000
-1.000000 10.000000 5.000000 0.000000 1.000000 0.000000
1.000000 10.000000 0.000000 0.000000 1.000000 0.000000
-1.000000 10.000000 0.000000 0.000000 1.000000 0.000000
1.000000 10.000000 5.000000 0.000000 1.000000 0.000000
-10.000000 -1.000001 5.000000 -1.000000 -0.000000 0.000000
-10.000000 0.999999 0.000000 -1.000000 -0.000000 0.000000
-10.000000 -1.000001 0.000000 -1.000000 -0.000000 0.000000
-10.000000 0.999999 5.000000 -1.000000 -0.000000 0.000000
1.000000 -10.000000 5.000000 0.000000 -1.000000 0.000000
-1.000000 -10.000000 0.000000 0.000000 -1.000000 0.000000
1.000000 -10.000000 0.000000 0.000000 -1.000000 0.000000
-1.000000 -10.000000 5.000000 0.000000 -1.000000 0.000000
10.000000 1.000002 5.000000 1.000000 -0.000000 0.000000
10.000000 -0.999998 0.000000 1.000000 -0.000000 0.000000
10.000000 1.000002 0.000000 1.000000 -0.000000 0.000000
10.000000 -0.999998 5.000000 1.000000 -0.000000 0.000000
3 0 1 2
3 0 3 4
3 0 5 1
3 0 4 6
3 7 8 9
3 10 9 8
3 5 11 8
3 12 13 14
3 12 15 16
3 12 14 17
3 12 18 15
3 19 20 21
3 22 21 20
3 17 21 23
3 24 25 26
3 27 26 25
3 28 29 30
3 31 29 28
3 32 33 34
3 35 33 32
3 36 37 38
3 39 37 36
3 40 34 41
3 32 34 40
3 0 2 42
3 43 44 45
3 46 44 43
3 2 44 47
3 12 48 13
3 49 50 51
3 52 50 49
3 53 50 13
3 54 55 56
3 57 55 54
3 58 59 60
3 61 59 58
3 62 63 64
3 65 63 62
3 66 64 67
3 62 64 66
3 68 69 70
3 71 69 68
3 72 73 74
3 75 73 72
3 0 76 77
3 0 42 78
3 0 78 76
3 79 80 81
3 82 80 79
3 78 80 83
3 12 84 85
3 12 86 48
3 12 85 86
3 87 88 89
3 90 88 87
3 91 88 86
3 92 93 94
3 95 93 92
3 96 97 98
3 99 98 97
3 100 101 102
3 103 101 100
3 104 102 105
3 100 102 104
3 106 107 108
3 109 107 106
3 0 77 110
3 111 112 113
3 114 112 111
3 77 112 115
3 12 116 84
3 117 118 119
3 120 118 117
3 121 118 84
3 122 123 124
3 125 123 122
3 126 127 128
3 129 127 126
3 130 131 132
3 133 132 131
3 134 131 135
3 133 131 134
3 136 137 138
3 139 137 136
3 140 141 142
3 143 141 140
3 0 144 145
3 0 110 146
3 0 146 144
3 147 148 149
3 150 148 147
3 146 148 151
3 12 152 153
3 12 154 116
3 12 153 154
3 155 156 157
3 158 156 155
3 159 156 154
3 160 161 162
3 163 161 160
3 164 165 166
3 167 165 164
3 168 169 170
3 171 170 169
3 169 172 171
3 173 171 172
3 174 175 176
3 177 176 175
3 0 145 178
3 179 180 181
3 182 180 179
3 183 180 184
3 12 185 152
3 186 187 188
3 189 187 186
3 190 187 152
3 191 192 193
3 194 193 192
3 195 196 197
3 198 196 195
3 199 200 201
3 202 200 199
3 203 201 204
3 199 201 203
3 205 206 207
3 208 207 206
3 209 210 211
3 212 210 209
3 0 213 3
3 0 178 214
3 0 214 213
3 215 216 217
3 218 216 215
3 214 216 219
3 12 16 220
3 12 221 185
3 12 220 221
3 222 223 224
3 225 223 222
3 226 223 221
3 227 228 229
3 230 228 227
3 231 232 233
3 234 232 231
3 235 236 237
3 238 237 236
3 236 239 238
3 240 238 239
3 241 242 243
3 244 243 242
3 245 246 247
3 248 246 245
3 249 246 250
3 251 252 253
3 254 252 251
3 255 252 256
3 257 258 259
3 260 259 258
3 261 262 263
3 264 262 261
3 265 266 267
3 268 267 266
3 269 266 270
3 268 266 269
3 271 272 273
3 274 272 271
3 275 276 277
3 278 276 275
3 279 280 281
3 282 280 279
3 283 284 285
3 286 284 283
3 287 288 289
3 290 288 287
3 291 292 293
3 294 292 291
