crates/luacad/tests/snapshots/example_snapshots__gear_scad.snap
---
source: crates/luacad/tests/example_snapshots.rs
expression: scad_output(&geoms)
---
// Generated by LuaCAD

union() {
  union() {
    union() {
      union() {
        union() {
          union() {
            union() {
              union() {
                cylinder(h = 5, r1 = 7, r2 = 7, $fn = 32);
                rotate([0, 0, 45]) {
                  translate([6.4, -1, 0]) {
                    cube([3.6, 2, 5]);
                  }
                }
              }
              rotate([0, 0, 90]) {
                translate([6.4, -1, 0]) {
                  cube([3.6, 2, 5]);
                }
              }
            }
            rotate([0, 0, 135]) {
              translate([6.4, -1, 0]) {
                cube([3.6, 2, 5]);
              }
            }
          }
          rotate([0, 0, 180]) {
            translate([6.4, -1, 0]) {
              cube([3.6, 2, 5]);
            }
          }
        }
        rotate([0, 0, 225]) {
          translate([6.4, -1, 0]) {
            cube([3.6, 2, 5]);
          }
        }
      }
      rotate([0, 0, 270]) {
        translate([6.4, -1, 0]) {
          cube([3.6, 2, 5]);
        }
      }
    }
    rotate([0, 0, 315]) {
      translate([6.4, -1, 0]) {
        cube([3.6, 2, 5]);
      }
    }
  }
  rotate([0, 0, 360]) {
    translate([6.4, -1, 0]) {
      cube([3.6, 2, 5]);
    }
  }
}
