crates/luacad/tests/snapshots/example_snapshots__literal_openscad_scad.snap
---
source: crates/luacad/tests/example_snapshots.rs
expression: scad_output(&geoms)
---
// Generated by LuaCAD

union() {
  union() {
    union() {
      cube([1, 2, 3]);
      translate([5, 0, 0]) {
        sphere(r = 2, $fn = 32);
      }
    }
    module fancy_cylinder() {
      cylinder(h=10, r1=3, r2=1, center=true, $fn=50);
    }
    fancy_cylinder();
  }
  translate([0, 10, 0]) {
    cylinder(h=5, r=2, center=true);
  }
}
