crates/luacad/tests/snapshots/example_snapshots__rounded_rectangle_scad.snap
---
source: crates/luacad/tests/example_snapshots.rs
expression: scad_output(&geoms)
---
// Generated by LuaCAD

linear_extrude(height = 5) {
  hull() {
    union() {
      union() {
        union() {
          translate([2, 2, 0]) {
            circle(r = 2, $fn = 32);
          }
          translate([18, 2, 0]) {
            circle(r = 2, $fn = 32);
          }
        }
        translate([2, 8, 0]) {
          circle(r = 2, $fn = 32);
        }
      }
      translate([18, 8, 0]) {
        circle(r = 2, $fn = 32);
      }
    }
  }
}
