crates/luacad/tests/snapshots/example_snapshots__simple_car_scad.snap
---
source: crates/luacad/tests/example_snapshots.rs
expression: scad_output(&geoms)
---
// Generated by LuaCAD

union() {
  union() {
    union() {
      union() {
        union() {
          union() {
            union() {
              cube([60, 20, 10], center = true);
              translate([5, 0, 9.999]) {
                cube([30, 20, 10], center = true);
              }
            }
            translate([-20, -15, 0]) {
              rotate([90, 0, 0]) {
                cylinder(h = 3, r1 = 8, r2 = 8, $fn = 32, center = true);
              }
            }
          }
          translate([-20, 15, 0]) {
            rotate([90, 0, 0]) {
              cylinder(h = 3, r1 = 8, r2 = 8, $fn = 32, center = true);
            }
          }
        }
        translate([20, -15, 0]) {
          rotate([90, 0, 0]) {
            cylinder(h = 3, r1 = 8, r2 = 8, $fn = 32, center = true);
          }
        }
      }
      translate([20, 15, 0]) {
        rotate([90, 0, 0]) {
          cylinder(h = 3, r1 = 8, r2 = 8, $fn = 32, center = true);
        }
      }
    }
    translate([-20, 0, 0]) {
      rotate([90, 0, 0]) {
        cylinder(h = 30, r1 = 2, r2 = 2, $fn = 32, center = true);
      }
    }
  }
  translate([20, 0, 0]) {
    rotate([90, 0, 0]) {
      cylinder(h = 30, r1 = 2, r2 = 2, $fn = 32, center = true);
    }
  }
}
