crates/luacad/tests/snapshots/example_snapshots__simple_scad.snap
---
source: crates/luacad/tests/example_snapshots.rs
expression: scad_output(&geoms)
---
// Generated by LuaCAD

union() {
  cube([1, 2, 3]);
  translate([5, 0, 0]) {
    sphere(r = 2, $fn = 32);
  }
}
