crates/luacad/tests/snapshots/example_snapshots__tostring_demo_scad.snap
---
source: crates/luacad/tests/example_snapshots.rs
expression: scad_output(&geoms)
---
// Generated by LuaCAD

union() {
  color([1, 0, 0]) {
    cube([10, 10, 10]);
  }
  color([0, 0, 1]) {
    sphere(r = 7, $fn = 32);
  }
}
